--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - /media/raid/home:/nas/raid
       - /media/disk-0/home:/nas/disk-0
       - /media/disk-1/home:/nas/disk-1
-      - /mnt/nas/persistent:/mnt/persistent
+      - /media/raid/persistent:/mnt/persistent
     network_mode: host
     cap_add:
       - NET_ADMIN
