--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,23 @@
 version: '3'
 
 services:
-  cgnas:
+  cgnas1804:
     build:
       context: .
-      args:
-        VSFTPD_PASV_MIN_PORT: ${VSFTPD_PASV_MIN_PORT}
-        VSFTPD_PASV_MAX_PORT: ${VSFTPD_PASV_MAX_PORT}
+      dockerfile: Dockerfile.1804
+    restart: always
+    hostname: nas-docker-1804
+    volumes:
+      - ./scripts_dynamic:/root/scripts_dynamic:ro
+      - /media/raid/home:/nas/raid
+      - /media/disk-0/home:/nas/disk-0
+      - /media/disk-1/home:/nas/disk-1
+    network_mode: host
+
+  cgnas2004:
+    build:
+      context: .
+      dockerfile: Dockerfile.2004
     restart: always
     hostname: nas-docker
     volumes:
