--- a/Dockerfile.1804
+++ b/Dockerfile.1804
@@ -27,13 +27,13 @@ RUN apt-get update && \
 		dc default-jdk default-jre dos2unix \
 		expect \
 		ffmpeg fish \
-		gdb gfortran git gnulib gnupg-agent gnupg1 gnupg2 golang-go \
+		gdb gfortran git gnulib gnupg-agent gnupg1 gnupg2 golang \
 		htop \
 		iftop imagemagick iotop iputils-ping \
 		landscape-client less libboost-dev libfreetype6-dev libglu-dev liblapack-dev liblapacke-dev libmysqlclient-dev libopenblas-dev libpcre++-dev libopencv-dev libsnappy-dev libssl-dev links lm-sensors locales locate lsb-release \
 		man mysql-client \
 		nano net-tools nmap nodejs ntpdate \
-		p7zip-full php pkg-config procinfo proxychains psmisc python-dev python-pip python-setuptools python-tk python3-dev python3-setuptools python3-tk \
+		p7zip-full php php-dev pkg-config procinfo proxychains psmisc python-dev python-pip python-setuptools python-tk python3-dev python3-setuptools python3-tk \
 		rar ruby-bundler ruby-dev \
 		screen shadowsocks-libev smbclient software-properties-common sshfs supervisor \
 		telnet tmux traceroute \
